k3s/mongodb/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mongo-express-ingress
  namespace: mongodb-operator
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  rules:
    - host: mongo-express.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
